@@ -1,7 +1,7 @@
 ## $Id$
 ## texk/web2c/xetexdir/am/xetex.am: Makefile fragment for XeTeX.
 ##
-## Copyright 2017 Karl Berry <tex-live@tug.org>
+## Copyright 2017-2020 Karl Berry <tex-live@tug.org>
 ## Copyright 2009-2015 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 
@@ -28,19 +28,19 @@ xetex_cppflags += $(FREETYPE2_INCLUDES)
 xetex_cppflags += $(TECKIT_INCLUDES)
 xetex_cppflags += $(HARFBUZZ_INCLUDES)
 xetex_cppflags += $(GRAPHITE2_INCLUDES)
-xetex_cppflags += $(POPPLER_INCLUDES)
 xetex_cppflags += $(LIBPNG_INCLUDES)
 xetex_cppflags += $(ZLIB_INCLUDES)
+xetex_cppflags += $(PPLIB_INCLUDES)
 xetex_cppflags += -I$(srcdir)/libmd5
 xetex_ldadd = $(libxetex)
 xetex_ldadd += $(HARFBUZZ_LIBS)
 xetex_ldadd += $(GRAPHITE2_LIBS)
 xetex_ldadd += $(ICU_LIBS) $(ICU_LIBS_EXTRA)
 xetex_ldadd += $(TECKIT_LIBS)
-xetex_ldadd += $(POPPLER_LIBS)
 xetex_ldadd += $(LIBPNG_LIBS)
 xetex_ldadd += $(FREETYPE2_LIBS)
 xetex_ldadd += $(ZLIB_LIBS)
+xetex_ldadd += $(PPLIB_LIBS)
 xetex_ldadd += libmd5.a
 xetex_dependencies = $(proglib)
 xetex_dependencies += $(KPATHSEA_DEPEND)
@@ -48,25 +48,22 @@ xetex_dependencies += $(ICU_DEPEND)
 xetex_dependencies += $(TECKIT_DEPEND)
 xetex_dependencies += $(HARFBUZZ_DEPEND)
 xetex_dependencies += $(GRAPHITE2_DEPEND)
-xetex_dependencies += $(POPPLER_DEPEND)
 xetex_dependencies += $(LIBPNG_DEPEND)
 xetex_dependencies += $(FREETYPE2_DEPEND)
 xetex_dependencies += $(ZLIB_DEPEND)
+xetex_dependencies += $(PPLIB_DEPEND)
 xetex_dependencies += libmd5.a
 
 if XETEX_MACOSX
-
 xetex_cppflags += -DXETEX_MAC
 xetex_LDFLAGS = -framework ApplicationServices -framework Cocoa
 OBJCXXFLAGS += -std=c++11
 
 else !XETEX_MACOSX
-
 xetex_cppflags += $(FONTCONFIG_INCLUDES)
 xetex_ldadd += $(FONTCONFIG_LIBS)
 
 endif !XETEX_MACOSX
-
 
 xetex_CPPFLAGS = $(xetex_cppflags)
 xetex_CFLAGS = $(WARNING_CFLAGS)
@@ -75,7 +72,7 @@ xetex_CXXFLAGS = # $(WARNING_CXXFLAGS)
 ## With --enable-ipc, XeTeX may need to link with -lsocket.
 xetex_LDADD = $(xetex_ldadd) $(LDADD) $(ipc_socketlibs)
 
-# We must create libxetex.a etc before building the xetex_OBJECTS
+## We must create libxetex.a etc before building the xetex_OBJECTS
 xetex_prereq = $(libxetex) xetexdir/etex_version.h xetexdir/xetex_version.h
 $(xetex_OBJECTS): $(xetex_prereq)
 
